invalid_var_sym_sym_arg_keywords_test/invalid_var_sym_sym_arg_keywords_test_21.src
.IPPcode24
MUL GF@e int bool@false